<resources>
    <string name="app_name">Nordija Statistics</string>
    <string name="settings_title">Settings</string>
    <string-array name="menu_items">
        <item>Charts</item>
    </string-array>
    <string-array name="menu_chart_items">
        <item>Advertisements</item>
        <item>Channels</item>
        <item>DVR Recordings</item>
        <item>Movies</item>

        <item>Selfcare Sub.</item>
        <item>Shop Views</item>
        <item>Start Overs</item>
        <item>Timeshift</item>
        <item>VoD Movies</item>
        <item>VoD Trailers</item>
        <item>WebTV Logins</item>
        <item>Widgets</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="global_settings_title">Global Settings</string>
    <string name="server_settings_title">Server Settings</string>
    <string name="server_addr_dialog_title">Host Name/IP</string>
    <string name="server_addr_title">Server Address</string>
    <string name="server_addr_sum">Name or IP address of the statistics server</string>
    <string name="server_port_dialog_title">Port</string>
    <string name="server_port_title">Server Port</string>
    <string name="server_port_sum">Port number of the statistics server</string>
    <string name="server_timeout_dialog_title">Connection Timeout</string>
    <string name="server_timeout_title">Connection Timeout</string>
    <string name="server_timeout_sum">Number of seconds to wait for the server to respond</string>
    <string name="user_creds_title">User Credentials</string>
    <string name="user_id">User name</string>
    <string name="user_pwd">Password</string>
    <string name="user_id_sum">User ID or name</string>
    <string name="user_pwd_sum">User Password</string>
    <string name="only_wifi">Wifi Only</string>
    <string name="chart_settings_title">Default Chart Settings</string>
    <string name="viewers">Viewers</string>
    <string name="duration">Duration</string>
    <string name="top">Top</string>
    <string name="bottom">Buttom</string>
    <string name="three">Three</string>
    <string name="five">Five</string>
    <string name="ten">Ten</string>
    <string name="reset_msg">Reset all values to their defaults?</string>
    <string name="reset_negativ">No, keep current values</string>
    <string name="reset_positiv">Yes, RESET all values</string>
    <string name="reset_summery">Reset all settings to their initial values.</string>
    <string name="reset_title">Reset to default</string>
    <string name="popular">popular</string>
	<string name="currentDay">Current Day</string>
	<string name="currentWeek">Current Week</string>
	<string name="currentMonth">Current Month</string>
	<string-array name="dataload_options">
	    <item>Three Most Popular</item>
	    <item>Five Most Popular</item>
	    <item>Ten Most Popular</item>
	    <item>Three Least Popular</item>
	    <item>Five Least Popular</item>
	    <item>Ten Least Popular</item>
	</string-array>
	<string-array name="months">
	    <item>January</item>
	    <item>February</item>
	    <item>March</item>
	    <item>April</item>
	    <item>May</item>
	    <item>June</item>
	    <item>July</item>
	    <item>August</item>
	    <item>September</item>
	    <item>October</item>
	    <item>November</item>
	    <item>December</item>
	</string-array>
	<string name="time.cell.disp">hours of total time</string>
	<string name="viewers.cell.disp">viewers</string>
	<string name="addUsage.y_title">Number of Advertisement Views</string>
	<string name="addUsage.title">Advertisement Views</string>
	<string name="addUsage.cell.disp">ad. views</string>
	<string name="channels.y_title1">Number of Viewers</string>
	<string name="channels.y_title2">Total Watched Hours</string>
	<string name="channels.title.column.chart">TV Channels</string>
	<string name="channels.title.pie.chart1">TV Channels - Total Number of Viewers</string>
	<string name="channels.title.pie.chart2">TV Channels - Total Watched Hours</string>
	<string name="dvr.y_title1">Number of Viewers</string>
	<string name="dvr.y_title2">Total Watched Hours</string>
	<string name="dvr.title.column.chart">DVR Recordings</string>
	<string name="dvr.title.pie.chart1">DVR Recordings - Total Number of Recordings</string>
	<string name="dvr.title.pie.chart2">DVR Recordings - Total Recorded Hours</string>
	<string name="dvr.cell.disp">recordings</string>
	<string name="movierent.y_title">Number of Rentals</string>
	<string name="movierent.title">Movie Rentals</string>
	<string name="movierent.cell.disp">rentals</string>
	<string name="programs.y_title1">Number of Viewers</string>
	<string name="programs.y_title2">Total Watched Hours</string>
	<string name="programs.title.column.chart">TV Programs</string>
	<string name="programs.title.pie.chart1">TV Programs - Number of Viewers</string>
	<string name="programs.title.pie.chart2">TV Programs - Total Watched Hours</string>
	<string name="selfcaresub.y_title">Number of Selfcare Subscriptions</string>
	<string name="selfcaresub.title">Selfcare Subscriptions</string>
	<string name="selfcaresub.cell.disp">subscriptions</string>
	<string name="shopview.y_title">Number of Shop Views</string>
	<string name="shopview.title">Shop Views</string>
	<string name="shopview.cell.disp">shop views</string>
	<string name="startover.y_title">Number of Start-Overs</string>
	<string name="startover.title">Start Over Usage</string>
	<string name="startover.cell.disp">start overs</string>
	<string name="timeshift.y_title1">Number of Viewers</string>
	<string name="timeshift.y_title2">Total Watched Hours</string>
	<string name="timeshift.title.column.chart">Timeshift Views</string>
	<string name="timeshift.title.pie.chart1">Timeshift Views - Total Number of Viewers</string>
	<string name="timeshift.title.pie.chart2">Timeshift Views - Total Watched Hours</string>
	<string name="vodmovie.y_title1">Number of Viewers</string>
	<string name="vodmovie.y_title2">Total Watched Hours</string>
	<string name="vodmovie.title.column.chart">VoD Movies</string>
	<string name="vodmovie.title.pie.chart1">VoD Movies - Total Number of Viewers</string>
	<string name="vodmovie.title.pie.chart2">VoD Movies - Total Watched Hours</string>
	<string name="vodmovie.cell.disp">VoD uses</string>
	<string name="vodtrailer.y_title1">Number of Viewers</string>
	<string name="vodtrailer.y_title2">Total Watched Hours</string>
	<string name="vodtrailer.title.column.chart">VoD Trailers</string>
	<string name="vodtrailer.title.pie.chart1">VoD Trailers - Total Number of Viewers</string>
	<string name="vodtrailer.title.pie.chart2">VoD Trailers - Total Watched Hours</string>
	<string name="webtvlogin.y_title">Number of WebTV Logins</string>
	<string name="webtvlogin.title">WebTV Logins</string>
	<string name="webtvlogin.cell.disp">webtv logins</string>
	<string name="widgetshow.y_title">Number of Activations</string>
	<string name="widgetshow.title">Widget Activations</string>
	<string name="widgetshow.cell.disp">widget activations</string>
    <string name="fetch">Fetch</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string-array name="choose_date">
        <item>Choose Date</item>
        <item>Current Day</item>
        <item>Current Week</item>
        <item>Current Month</item>
        <item>Current Year</item>
    </string-array>
    <string name="shiraz_consult">Shiraz Consult</string>
    <string name="nordija_stats">Nordija Statistics</string>
    <string name="version">Version 1.0</string>
    <string name="powered_by">Powered by</string>
    <string name="nordija_logo">Nordija logo</string>
    <string name="help_title">Help</string>
    <string name="help_page_intro">
         <![CDATA[
         <p>
         This application retrieves statistics information from Nordija\'s backend services and can only be used with the
         statistics services infrastructure provided by Nordija.
         Nordija\'s statistics services provide various information regarding the end user\'s behaviour on <i>TV set-top 
         boxes</i> and <i>Nordija\'s second screen applications</i>.
         <p>
         This application presents data in charts and tables for various time frames for the recent year. For each time frame
         you may choose to see the top 3, 5 and 10 or the bottom 3, 5, and 10 events. By &quot;top&quot; we mean the most popular 
         and by &quot;bottom&quot; we mean the least popular.
         The current version processes statistics with respect to:
         </p>         
         &#8226; <li>Advertisements</li><br/>
         &#8226; <li>TV channels</li><br/>
         &#8226; <li>DVR Recordings</li><br/>
		 &#8226; <li>Movie rentals</li><br/>
         &#8226; <li>Selfcare Subscriptions</li><br/> 
         &#8226; <li>Shop Views</li><br/>
         &#8226; <li>Start Over</li><br/>
         &#8226; <li>Timeshift</li><br/>
         &#8226; <li>VoD Movies</li><br/>
         &#8226; <li>VoD Trailers</li><br/>
         &#8226; <li>WebTV Logins</li><br/>
         &#8226; <li>Widget activations</li>
         ]]>             
    </string>
     <string name="barchart_help_intro">
         <![CDATA[
         Depending on the type of event (channel or program, movie rentals etc.) there may be one or two different column 
         charts. For channels and programs we usually have two column charts, one that shows ...
         ]]>
         </string>
     <string name="barchart_help_title">Bar Charts</string>
     <string name="piechart_help_intro">         
         <![CDATA[
         Depending on the type of event (channel or program, movie rentals etc.) there may be one or two different pie 
         charts. For channels and programs we usually have two pie charts, one that shows ...
         ]]>
     </string>
     <string name="piechart_help_title">Pie Charts</string>
     <string name="settings_help_intro">
         <![CDATA[
         The settings page contains information which is necessary to set correctly up before the application can work properly.
         The main part of the settings is about the <i>server address</i> and <i>port</i> where the Nordija statistics ...
         ]]>
     </string>
     <string name="settings_help_title">Chart Settings</string>
     <string name="barchart_help_topic">
         <![CDATA[
         <p>
         Depending on the type of event (channel or program, movie rentals etc.) there may be one or two different column 
         charts. For channels and programs we usually have two column charts, one that shows the number of viewers and one that 
         shows the total number of watched hours. For movie rentals and widget activations theres only one column chart showing
         the total number of happenings.  
         </p>
         <p>
         Bar charts or column charts show data for various time intervals. 
         </p>
         <p>
         If the chart time spans over a day (e.g. current day), then the chart shows data for each hour since midnight. 
         </p>
         <p>
         If the chart time spans over a week (e.g. current week), then the chart shows data for each day since sunday. 
         </p>         
         <p>
         If the chart time spans over a month or less, then the chart shows data for each week in the month. 
         </p>
         <p>
         If the chart time spans over several months (e.g. current year) then the chart shows data for each months.
         </p>
         ]]>
	 </string>
</resources>