<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- 
    <PreferenceCategory
        android:key="global_settings"
        android:orderingFromXml="true">
        <Preference 
            android:layout="@layout/global_settings"/>
    
    </PreferenceCategory>
     -->
    <PreferenceCategory
        android:key="server_settings"
        android:orderingFromXml="true"
        android:title="@string/server_settings_title" >
        <EditTextPreference
            android:defaultValue="10.0.2.2"
            android:dialogTitle="@string/server_addr_dialog_title"
            android:key="host"
            android:order="1"			            
            android:persistent="true"
            android:title="@string/server_addr_title" 
            android:summary="@string/server_addr_sum"/>
        <EditTextPreference
            android:defaultValue="9119"
            android:dialogTitle="@string/server_port_dialog_title"
            android:key="port"
            android:order="2"
            android:numeric="integer"
            android:inputType="number"
    		android:maxLength="5"
            android:persistent="true"
            android:title="@string/server_port_title" 
            android:summary="@string/server_port_sum"/>
		<EditTextPreference
            android:defaultValue="5"
            android:dialogTitle="@string/server_timeout_dialog_title"
            android:key="connectionTimeout"
            android:order="3"
            android:numeric="integer"
            android:inputType="number"
    		android:maxLength="2"
            android:persistent="true"
            android:title="@string/server_timeout_title" 
            android:summary="@string/server_timeout_sum"/>        
	</PreferenceCategory>
    <PreferenceCategory
        android:key="user_creds_settings"
        android:orderingFromXml="true"
        android:title="@string/user_creds_title" >
        <EditTextPreference
            android:dialogTitle="@string/user_id"
            android:key="username"
            android:order="1"			            
            android:persistent="true"
            android:summary="@string/user_id_sum"
            android:title="@string/user_id" />
        <EditTextPreference
            android:dialogTitle="@string/user_pwd"
            android:key="pwd"
            android:order="2"
            android:persistent="true"
            android:inputType="textPassword" 
            android:summary="@string/user_pwd_sum"
            android:title="@string/user_pwd" /> 
	</PreferenceCategory>
    	
    <PreferenceCategory>
        <CheckBoxPreference
            android:key="only_wifi"
			android:summary="Retrieve data from server only when on WiFi"
			android:title="@string/only_wifi" />        
    </PreferenceCategory>
</PreferenceScreen>